fixed alignment issues, added cart button animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@ h3 {
 .doctor-image {
   position: absolute;
   padding-left: 40px;
+  left: 0;
+}
+
+.mobile-doctor-image {
+  display: none;
 }
 
 .brown-red-sec p {
@@ -280,6 +285,7 @@ a {
     display: none;
   }
   .mobile-doctor-image {
+    display: block;
     height: 250px;
   }
   .brown-bar-sec p {
@@ -287,3 +293,29 @@ a {
   }
 }
 
+#cart-button:focus {
+  -webkit-animation-name: color-change; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-delay: 0s; /* Safari 4.0 - 8.0 */
+  animation-name: color-change;
+  animation-duration: 4s;
+  animation-delay: 0s;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes color-change {
+  0%   {background-color:red;}
+  25%  {background-color:yellow;}
+  50%  {background-color:blue;}
+  75%  {background-color:green;}
+  100% {background-color:red;}
+}
+
+/* Standard syntax */
+@keyframes color-change {
+  0%   {background-color:red;}
+  25%  {background-color:yellow;}
+  50%  {background-color:blue;}
+  75%  {background-color:green;}
+  100% {background-color:red;}
+}
